--- a/railway.toml
+++ b/railway.toml
@@ -3,8 +3,8 @@ builder = "NIXPACKS"
 buildCommand = "yarn install && yarn build"
 
 [deploy]
-# 启动前自动运行数据库迁移，确保数据库结构最新
-startCommand = "yarn medusa db:migrate && yarn start"
+# 暂时移除启动时的自动迁移，直接启动服务
+startCommand = "yarn start"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 restartPolicyType = "on_failure"
